Prefs window no longer respects 'headerbar' setting
I'm using Ubuntu's Unity desktop (i.e. not GNOME).
By default, g-t
would come up with SSD (no headerbar). I have /org/gnome/terminal/legacy/headerbar
overridden to true
so that g-t uses CSD headerbar.
This used to affect the Prefs panel, too. As of recently (with the prefs being split to a separate binary, I guess) this no longer works, my Prefs window is back to SSD.
Would it make sense for g-t-p
to base its own look on the settings it's managing? It's a bit weird and inconsistent that g-t
itself as well as its Find panel has a certain look, and the Prefs panel has another.
(Super low prio, I don't mind if NOTABUG or WONTFIX or simply we just have more important things to work on.:))