prefs: Get the headerbar pref

Fixes: https://gitlab.gnome.org/GNOME/gnome-terminal/-/issues/8008
(cherry picked from commit 997026185c320e8d3b36e2bd6f42a6bde5941521)